fixed text align in responsive nav popup

--- a/frontend-web/src/styles/Navbar.css
+++ b/frontend-web/src/styles/Navbar.css
@@ -117,6 +117,7 @@ label:before {
   display: block;
   font-size: 20px;
   height: 50px;
+  text-align: center;
   align-items: center;
   text-decoration: none;
   margin-top: 20px;
